helloaks-app-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-aks
  labels:
    app: hello-aks
spec:
  selector:
    matchLabels:
      app: hello-aks
  template:
    metadata:
      labels:
        app: hello-aks
    spec:
      containers:
      - name: hello-aks
        image: comfycoder/helloaks:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-aks
  # The following two lines are required when using an ingress controller
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    app: hello-aks
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: hello-aks
