keyvault-demo-app-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keyvault-demo
  labels:
    app: keyvault-demo
spec:
  selector:
    matchLabels:
      app: keyvault-demo
  template:
    metadata:
      labels:
        app: keyvault-demo
        aadpodidbinding: aad-demo-app
    spec:
      containers:
      - name: keyvault-demo
        image: acr.azurecr.io/keyvault-demo:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 128Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: keyvault-demo
  # The following two lines are required when using an ingress controller
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    name: keyvault-demo
    app: keyvault-demo
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: keyvault-demo
