nginx-ingress-cloud-generic.yaml
kind: Service
apiVersion: v1
metadata:
  #annotations:
    #service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  #loadBalancerIP: 10.0.1.254
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https

---
