helloaks-ingress-routes.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-aks-route
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#services NEED to be in the same namespace as the ingress, otherwise you'll get a 503
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hello-aks
          servicePort: 80
